# job-hunter

./: .env.example  .gitignore  .project  README.md  manage.py  pyproject.toml  requirements.txt
job_hunting_project/: asgi.py  auth_backend.py  auth_middleware.py  context_processors.py  settings.py  supabase_auth_backend.py  supabase_middleware.py  urls.py  wsgi.py
jobbai-frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.ts
jobbai-frontend/src/: App.tsx  index.css  main.tsx
matcher/: data_structures.py  forms.py  gemini_utils.py  models.py  tests.py  urls.py  utils.py  views.py
matcher/migrations/: 0001_initial.py  0002_matchsession_matchedjob.py  0002_remove_userprofile_session_key_alter_savedjob_status.py  0003_savedjob.py  0003_userprofile_cv_analysis_cache_and_more.py  0004_coverletter.py  0004_update_saved_job_status_choices.py  0005_matchedjob_match_details_alter_savedjob_status.py  0006_remove_matchedjob_match_details_joblisting_level.py  0007_matchsession_structured_user_profile_json_and_more.py  0008_matchedjob_insights_matchedjob_tips.py  0009_workexperience.py  0010_delete_workexperience.py  0011_experience_userprofile.py  0012_customresume.py  0013_joblisting_translated_description.py
matcher/services/: experience_service.py  job_listing_service.py  pdf_parser.py  supabase_auth_helper.py  supabase_cover_letter_service.py  supabase_match_service.py  supabase_saved_job_service.py  supabase_user_profile_service.py
matcher/templatetags/: matcher_extras.py
matcher/views/: README.md  __init__.py  auth_views.py  (+5 more)
(+67 files in other folders)
