[project]
name = "job-hunting-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Jiaqi Wen",email = "127540860+wenjiaqi8255@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "django (>=5.0.4,<5.1.0)",
    "django-cors-headers (>=4.3.1,<4.4.0)",
    "pymupdf (>=1.24.1,<1.25.0)",
    "google-generativeai (>=0.5.0,<0.6.0)",
    "gunicorn (>=23.0.0,<23.1.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "django-allauth (>=65.10.0,<66.0.0)",
    "supabase (>=2.17.0,<3.0.0)",
    "reportlab (>=4.4.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.26.0,<8.27.0"
pytest = ">=7.4.0,<7.5.0"
pytest-django = ">=4.11.1,<4.12.0"

